fixed up some broken css

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,7 @@
 @import '../../styles/colors';
 
 .header {
+    background-size: cover;
     padding: 1.45rem 1.0875rem;
 }
 
